# gst-transcode

./: Makefile.am  configure.ac
debian/: README  changelog  control  copyright
src/: Makefile.am  gsttranscodebin.c  gsttranscodebin.h  plugin_defs.c
tests/: Makefile.am  transcode-test.c
